remove InputRowParser implementations